# kapitan

./: .gitignore
server/: CMakeLists.txt
server/config/: master_eu.ini  slave_eu1.ini  slave_eu2.ini
server/kpserver/: CMakeLists.txt  con_socket.cpp  con_socket.h  hash.cpp  hash.h  ini_file.cpp  ini_file.h  main.cpp  msg_conv.cpp  msg_conv.h  net_client.cpp  net_client.h  net_group.cpp  net_group.h  net_master.cpp  net_master.h  net_packet.cpp  net_packet.h  net_session.cpp  net_session.h  net_session_player.cpp  net_session_player.h  net_session_rules.h  net_slave.cpp  net_slave.h  pos_session.cpp  pos_session.h  pos_socket.cpp  pos_socket.h  process_stats.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h  trace.cpp  trace.h  transform_entity.cpp  transform_entity.h  udp_server.cpp  udp_server.h  (+10 more)
server/testcases/win/: test.cmd
